# Coalemos

./: .gitignore  README.md  club.py  coalemosBot.py  main  pyproject.toml
scripts/: fixInternalLink.py  fixModels.py  getUnusedRedirect.py  handball_format_stats.py  renamePages.py  template.py  updateUserContributionsBox.py  user-config.py
scripts/startTranslate/: handballPage.py
